--- a/MedHistoryTrackerV2/Shared/NavMenu.razor.css
+++ b/MedHistoryTrackerV2/Shared/NavMenu.razor.css
@@ -4,12 +4,19 @@
 
 .top-row {
     height: 3.5rem;
-    background-color: #508bfc;
-    border-bottom:1px solid white;
+    background-color: var(--main-bg-color);
+    border-bottom: 1px solid white;
 }
 
 .navbar-brand {
     font-size: 1.1rem;
+}
+
+.logout {
+    color: white;
+    background:none;
+    outline:none;
+    border:none;
 }
 
 @media (min-width: 641px) {
