--- a/MedHistoryTrackerV2/Shared/LoginWidget.razor
+++ b/MedHistoryTrackerV2/Shared/LoginWidget.razor
@@ -1,6 +1,6 @@
 ﻿@inject WebsiteAuthenticator WebsiteAuthenticator
 
-<section class="vh-100" style="background-color: #508bfc;">
+<section class="vh-100" style="background-color: var(--main-bg-color);">
     <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col-12 col-md-8 col-lg-6 col-xl-5">
