--- a/MedHistoryTrackerV2/Shared/NavMenu.razor
+++ b/MedHistoryTrackerV2/Shared/NavMenu.razor
@@ -26,9 +26,11 @@
                 <i class="fas fa-solid fa-lg fa-file-alt pr-2"> </i> Reports
             </NavText>
         </NavItem>
-        <button onclick="TryLogout">
-            <i class="fas fa-solid fa-lg fa-sign-out pr-2"> </i> Logout
-        </button>
+        <NavItem RedirectUrl="Logout">
+            <NavText>
+                <i class="fas fa-solid fa-lg fa-sign-out-alt pr-2"> </i> Logout
+            </NavText>
+        </NavItem>
     </nav>
 </div>
 
@@ -56,9 +58,5 @@
     private void ToggleNavMenu()
     {
         collapseNavMenu = !collapseNavMenu;
-    }
-    private async Task TryLogout()
-    {
-        await WebsiteAuthenticator.LogoutAsync();
     }
 }
