--- a/MedHistoryTrackerV2/Pages/Master/Medication.razor
+++ b/MedHistoryTrackerV2/Pages/Master/Medication.razor
@@ -1,6 +1,17 @@
 ﻿@page "/mastermedication"
-<h3>Medicine</h3>
-
+@using MedHistoryTrackerV2.Services
+<h2>Medicine Catalog</h2>
+<p>@principal.FindFirstValue(ClaimTypes.Sid)</p>
+<p>@principal.FindFirstValue(ClaimTypes.Name)</p>
 @code {
-
+    [CascadingParameter]
+    private Task<AuthenticationState> authState { get; set; }
+    private ClaimsPrincipal principal { get; set; }
+    protected async override void OnParametersSet()
+    {
+        if (authState != null)
+        {
+            principal = (await authState).User;
+        }
+    }
 }
