--- a/MedHistoryTrackerV2/_Imports.razor
+++ b/MedHistoryTrackerV2/_Imports.razor
@@ -11,3 +11,5 @@
 @using MedHistoryTrackerV2.Authentication
 @using MedHistoryTrackerV2.Components
 @using MedHistoryTrackerV2.Data.Models
+@using MedHistoryTrackerV2.Services
+@using MedHistoryTrackerV2.Services.Abstractions
